# alphaine-python-sdk

./: .gitignore  README.md  install.sh  pyproject.toml
openapi/: sdk-v1.yaml
src/alphaine/: __init__.py  cli.py  client.py
tests/: test_cli.py  test_client.py
