[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alphaine"
version = "0.1.0"
description = "Python SDK for Alphaine data access"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27",
  "tqdm>=4.66",
]

[project.scripts]
alphaine = "alphaine.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
